changes to the website

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://developerfolio.js.org/",
+  "homepage": "https://porfolio.shariqdevops.online",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
