--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://porfolio.shariqdevops.online",
+  "homepage": "https://shariqazeem.github.io/developerfolio",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
