--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shariqazeem.github.io/developerfolio",
+  "homepage": "https://shariqazeem.github.io/OpsFolio",
   "name": "developerfolio",
   "version": "0.1.0",
   "private": true,
